--- a/src/main/resources/templates/adminView.html
+++ b/src/main/resources/templates/adminView.html
@@ -5,6 +5,6 @@
     <title>AdminView</title>
 </head>
 <body>
-ten vidok dostepny tylko dla adminow
+Ten vidok dostepny tylko dla adminow
 </body>
 </html>
